Fix align of the Slider

--- a/css/tablet.css
+++ b/css/tablet.css
@@ -82,6 +82,6 @@ html {
     width: 100%;
 }
 /*Slider*/
-.contact__container-slider {
+.contact-container__container-slider {
     justify-content: center;
 }
